--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,5 +5,5 @@ sonar.language=ts
 sonar.sourceEncoding=UTF-8
 sonar.sources=src
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
-sonar.exclusions=**/__tests__/**, **/*.test.ts, **/*.test.tsx, **/*.spec.ts, **/*.spec.tsx, src/App.tsx, src/main.tsx, coverage/**, **/*.css, jest.setup.ts, jest.config.ts, src/utils/API.ts
+sonar.exclusions=**/__tests__/**, **/*.test.ts, **/*.test.tsx, **/*.spec.ts, **/*.spec.tsx, src/App.tsx, src/main.tsx, coverage/**, **/*.css, jest.setup.ts, jest.config.ts, src/utils/API.ts, sonar-project.properties, src/redux/store.ts, src/redux/bookSlice.ts
 sonar.coverage.exclusions=**/__tests__/**, **/*.test.ts, **/*.test.tsx, **/*.spec.ts, **/*.spec.tsx, src/App.tsx, src/main.tsx, jest.setup.ts, jest.config.ts, src/utils/API.ts
